; ModuleID = '/home/carl/AnghaBench/linux/drivers/fpga/extr_fpga-mgr.c_fpga_mgr_put.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/fpga/extr_fpga-mgr.c_fpga_mgr_put.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fpga_manager = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { %struct.TYPE_5__* }
%struct.TYPE_5__ = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @fpga_mgr_put(%struct.fpga_manager* %0) #0 {
  %2 = alloca %struct.fpga_manager*, align 8
  store %struct.fpga_manager* %0, %struct.fpga_manager** %2, align 8
  %3 = load %struct.fpga_manager*, %struct.fpga_manager** %2, align 8
  %4 = getelementptr inbounds %struct.fpga_manager, %struct.fpga_manager* %3, i32 0, i32 0
  %5 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %4, i32 0, i32 0
  %6 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %7 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %6, i32 0, i32 0
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @module_put(i32 %10)
  %12 = load %struct.fpga_manager*, %struct.fpga_manager** %2, align 8
  %13 = getelementptr inbounds %struct.fpga_manager, %struct.fpga_manager* %12, i32 0, i32 0
  %14 = call i32 @put_device(%struct.TYPE_6__* %13)
  ret void
}

declare dso_local i32 @module_put(i32) #1

declare dso_local i32 @put_device(%struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
